# RobotFramework

./: .gitattributes  .gitignore  C++.gitignore  CHECK.sh  CMakeLists.txt  DEPENDENCIES.txt  Makefile  Moteus_setup.sh  MotorRun.cpp  MultiMotor.cpp  README.md  RobotFramework.cpp  RobotFrameworkOld.cpp  SETUP.sh  SETUP.txt  STARTUP.sh  Simple.cpp  StopMotor  StopMotor.cpp  detect_orange_ball  detect_orange_ball.cpp  motor_stopper  multiple_cycle.cpp  rfstartup.service  run  setup_clean.sh
Arduino/: Arduino.ino  CMAKELists.txt  CMakeLists.txt  CMakeListsss.txt  arduino.cpp  arduino.h  arduino_old.cpp  arduino_test.cpp
BallDetection/: CMakeLists.txt  Makefile  detect_ball.cpp  detect_ball.h  detect_orange_ball.cpp
Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Math/: CMakeLists.txt  Makefile  Wheel_velocity.cpp  heading_control.h  maths_test.cpp  wheel_math.cpp  wheel_math.h  wheel_velocity.cpp
MotorControl/: CMakeLists.txt  MotorControl.cpp  MotorControl.h  motorControlExample.cpp
Networks/: CMakeLists.txt  Decoder.cpp  Makefile  Reciever  Sender  Socket_reciever.cpp  UDP.cpp  UDP.h  UDPReciver.cpp  decode.cpp  decode.h  run
Networks/Tests/: Socket_reciever.cpp  Socket_sender.cpp  UDPReciver.cpp  UDPSender.cpp
Telemetry/: CMakeLists.txt  Telemetry.cpp  Telemetry.h  TelemetryTest.cpp  makefile  telemeteryExample.cpp  telemeteryTest2.cpp
config/: Main.yaml  Motor.yaml  Network.yaml  Safety.yaml  Startup.yaml
docs/known_issues/: BUG-ID-2.md  README.md  TROUBLESHOOTING.md  TROUBLESHOOTING.md 
docs/known_issues /: BUG-ID-1.md  README.md
mjbots/: README.md 
mjbots/moteus/: CMakeLists.txt  moteus.h  moteus_protocol.h  moteus_transport.h
mjbots/pi3hat/: CMakeLists.txt  Makefile  pi3hat.cc  pi3hat.h  pi3hat_moteus_transport.h  pi3hat_tool.cc  realtime.h
objectFiles/: Makefile
output/: detect_orange_ball
scripts/: rframework.service  startup.sh
tests/: ArduinoTest.cpp  Motor.cpp  MultiMotor.cpp  OpenLoopTest.cpp  Simple.cpp  motor.cpp
tests/check/: Arduino.cpp  Logger.h  Motor.cpp
tests/legacy/: ArduinoTest.cpp  MultiMotor.cpp  motor.cpp
